# scratchy

./: Cargo.toml  README.md  build.rs
.github/workflows/: auto-merge.yml  rust.yml
src/: main.rs
